fixup! Reimplemented the squish animation for the ToggleSwitch component's knob.

--- a/src/components/toggle-switch/ToggleSwitch.module.scss
+++ b/src/components/toggle-switch/ToggleSwitch.module.scss
@@ -43,10 +43,6 @@
   transform: rotateX(25deg);
 }
 
-.toggleSwitch:active .toggleSwitchKnob {
-  aspect-ratio: 1.5 / 1;
-}
-
 .toggleSwitchLight {
   background: #333;
 
